remove personal data

--- a/template/footer-eng.html
+++ b/template/footer-eng.html
@@ -24,16 +24,16 @@
   </div>
   <div class="container">
     <div class="desktop" style="margin-left: auto; margin-right: auto; text-align: center;">
-      <a href="https://goo.gl/maps/TCHVAwW4K3o2z1z78" style="text-decoration: none; color: black;">Address: 289 Nanchang Street, Sham Shui Po, Kowloon</a>
-      <a href="tel:27796851" style="text-decoration: none; color: black;">Phone: 27796851</a>
-      <a href="fax:27884434" style="text-decoration: none; color: black;">Fax: 27884434</a>
+      <a href="https://goo.gl/maps/TCHVAwW4K3o2z1z78" style="text-decoration: none; color: black;">Address: XXXXXXXX</a>
+      <a href="tel:XXXXXXXX" style="text-decoration: none; color: black;">Phone: XXXXXXXX</a>
+      <a href="fax:XXXXXXXX" style="text-decoration: none; color: black;">Fax: XXXXXXXX</a>
       <a href="mailto:s181034@cmass.edu.hk" style="text-decoration: none; color: black;">Email: s181034@cmass.edu.hk</a>
     </div>
     <div class="mobile container" style="padding-bottom: 26px;">
       <a href="https://goo.gl/maps/TCHVAwW4K3o2z1z78"
-        style="text-decoration: none; color: black;">Address: 289 Nanchang Street, Sham Shui Po, Kowloon</a></br>
-      <a href="tel:27796851" style="text-decoration: none; color: black;">Phone: 27796851</a></br>
-      <a href="fax:27884434" style="text-decoration: none; color: black;">Fax: 27884434</a></br>
+        style="text-decoration: none; color: black;">Address: XXXXXXXX</a></br>
+      <a href="tel:XXXXXXXX" style="text-decoration: none; color: black;">Phone: XXXXXXXX</a></br>
+      <a href="fax:XXXXXXXX" style="text-decoration: none; color: black;">Fax: XXXXXXXX</a></br>
       <a href="mailto:s181034@cmass.edu.hk" style="text-decoration: none; color: black;">Email: s181034@cmass.edu.hk</a>
     </div>
   </div>
